tests/failed/04-unsupported-variant.stderr
error: unsupported variant
 --> tests/failed/04-unsupported-variant.rs:5:5
  |
5 |     A()
  |     ^

error: unsupported variant
  --> tests/failed/04-unsupported-variant.rs:10:5
   |
10 |     Bar {}
   |     ^^^
