tests/failed/04-unsupported-variant.rs
use structified_enum::structify;

#[structify]
enum Foo {
    A()
}

#[structify]
enum Bar {
    Bar {}
}

fn main() {}
